<resources>
    <string name="app_name">Wishper</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="user_name">User Name</string>
    <string name="user_pwd">Password</string>
    <string name="login">SIGN IN</string>
    <string name="signup">SIGN UP</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="email">E-mail</string>
    <string name="dialog_title">Oops!!!</string>
    <string name="alter_msg">Please Fill all the fields</string>
    <string name="ok">Ok</string>
    <string name="success">Success</string>
    <string name="signed_up_msg">You are signed up !!!</string>
    <string name="logout">Logout</string>
    <string name="login_error">User Name or Password is invalid</string>
    <string name="name_list">Contacts</string>
    <string name="chat_list">Chat</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="section_format">Section</string>
    <string name="title_section_1">Inbox</string>
    <string name="title_section_2">Chat Room</string>
    <string name="empty_text_view">No New Messages</string>
    <string name="empty_friends_text">Add Friends to begin !!</string>
    <string name="title_activity_manage_friends">Manage Friends</string>
    <string name="manage_friends">Manage Friends</string>
    <string name="take_cam">Take Pics</string>
    <string name="error_capture_image">Problem occured while accessing Device\'s External storage</string>
    <string name="general_error">Something went wrong !!!</string>
    <string name="video_size_warning">Video size should be below 10MB</string>
    <string-array name="camera_choices">
        <item >Take Picture</item>
        <item >Record Videos</item>
        <item >Choose Photos</item>
        <item >Choose Videos</item>
    </string-array>
    <string name="title_activity_recipients">Choose Recipients</string>
    <string name="menu_send_label">SEND</string>
    <string name="error_selecting_media">Something went wrong while wrapping up your data. Please try again !!</string>
    <string name="error_title">We are sorry !</string>
    <string name="error_sending_message">Something went wrong while sending your message. Please try again !</string>
    <string name="message_sent">Message Sent !!</string>
    <string name="title_activity_view_image">ViewImage</string>
    <string name="backgound_desciption">Wishper background image</string>
    <string name="subtitle">Share Private Messages</string>
    <string name="sign_up_detailed">Don\'t Have an account? SignUp!</string>
    <string name="button_divider">Button Divider Image</string>
    <string name="cancel">CANCEL</string>
    <string name="push_message">Message was sent by %s !</string>
</resources>
