<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AuthBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.bhuwan.wishper.ui.LoginActivity">


    <ImageView
        android:id="@+id/backgroung_imageView"
        style="@style/AuthBackgroundImage"
        android:contentDescription="@string/backgound_desciption" />

    <TextView
        android:id="@+id/title"
        style="@style/AuthTitle" />

    <TextView
        android:id="@+id/subtitle"
        style="@style/AuthTitle.AuthSubTitle" />

    <LinearLayout
        android:id="@+id/editTextLinearLayout"
        style="@style/AuthFieldContainer">


        <EditText
            android:id="@+id/user_name_login"
            style="@style/AuthEditText"
            android:hint="@string/user_name"
            android:inputType="textEmailAddress">

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/password"
            style="@style/AuthEditText"
            android:hint="@string/user_pwd"
            android:inputType="textPassword" />
    </LinearLayout>

    <Button
        android:id="@+id/login_button"
        android:text="@string/login"
        style="@style/AuthButton"/>

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/sign_up_detailed"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <ProgressBar
        android:id="@+id/progressBar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign_up"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" />

</RelativeLayout>
